--- a/style.css
+++ b/style.css
@@ -86,6 +86,7 @@
   /* navbar styling */
   .navbar {
     position: fixed;
+    /* background-color: #06d6a0; */
     width: 100%;
     z-index: 999;
     padding: 30px 0;
@@ -790,10 +791,6 @@
     }
   }
   
-  #sam95{
-  
-  }
-
   /* _______________________________________________________________________________________________ */
 
 
