--- a/style.css
+++ b/style.css
@@ -291,60 +291,9 @@
   
  }
 
-  
-  /* services section styling */
-  .services,
-  .project {
-    color: #fff;
-     background: #111; 
-    
-  }
-  .services .title::before,
-  .project .title::before {
-    
-    background: #fff;
-  }
-  .services .title::after,
-  .project .title::after {
-    background: #111;
-    content: "what i provide";
-  }
-  .services .serv-content .card {
-    width: calc(33% - 20px);
-    background: #222;
-    text-align: center;
-    border-radius: 6px;
-    padding: 50px 25px;
-    cursor: pointer;
-    transition: all 0.3s ease;
-  }
-  .services .serv-content .card:hover {
-    background: #06d6a0;
-    color: #555;
-    /* change*/
-  }
-  .services .serv-content .card .box {
-    transition: all 0.3s ease;
-  }
-  .services .serv-content .card:hover .box {
-    transform: scale(1.05);
-  }
-  .services .serv-content .card i {
-    font-size: 50px;
-    color: #06d6a0;
-    transition: color 0.3s ease;
-  }
-  .services .serv-content .card:hover i {
-    color: #000;
-  }
-  .services .serv-content .card .text {
-    font-size: 25px;
-    font-weight: 500;
-    margin: 10px 0 7px 0;
-  }
-  
   /* skills section styling */
   .skills-images img {
+    align-items: center;
     padding: 12px;
     height: 150px;
     width: 150px;
@@ -365,7 +314,7 @@
   
   /* skills right column */
   .skills .skills-content .column {
-    width: calc(50% - 30px);
+    width: calc(52% - 30px);
     /* border: 2px solid black; */
     height: 90vh;
     display: grid;
