modified menu botton

--- a/style.css
+++ b/style.css
@@ -133,7 +133,7 @@
     color: #fff;
   }
   .navbar.sticky .menu li a{
-    color: #000;
+    /* color: #000; */
   }
   /* menu btn styling */
   .menu-btn {
